--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,29 @@
-name: Build WF
-on:
- push:
-  branches:
-    -main
+name: Build Job
+on: 
+  push:
+    branches: 
+      - main
+
 jobs:
- Build:
- runs-on: ubuntu-latest
- steps:
-  - name: Code checkout
-    uses: actions/checkout@v4
+  Build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Code checkout
+        uses: actions/checkout@v4
 
-  - name: Maven Build
-    run: mvn install
-Testing:
-runs-on: ubuntu-latest
-nees: Build
-steps:
+      - name: Maven Build
+        run: mvn install
 
-  - name: Run tests on main branches
-    run: mvn install
 
-  - name: Checkstyle
-    run: mvn checkstyle:checkstyle 
-    
+  Testing:
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
+      - name: Code checkout
+        uses: actions/checkout@v4
+
+      - name: Run tests on main branch
+        run: mvn test
+
+      - name: Checkstyle
+        run: mvn checkstyle:checkstyle
