--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 name: Build Job
 on: 
-  push:
-    branches: 
+ # push:
+   # branches: 
+   #   - main
+   pull_request:
+     branches:
       - main
 
 jobs:
