Bug Fixes Third Deployment

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ on:
    #   - main
    pull_request:
      branches:
-      - main
+      - Bug-Fix
 
 jobs:
   Build:
@@ -13,7 +13,8 @@ jobs:
     steps:
       - name: Code checkout
         uses: actions/checkout@v4
-
+        with:
+          fetch-depth: 0
       - name: Maven Build
         run: mvn install
 
@@ -24,6 +25,8 @@ jobs:
     steps:
       - name: Code checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Run tests on main branch
         run: mvn test
