--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,8 @@ on:
    pull_request:
      branches:
       - main
-   Permissions:
-     contents: read
+   permissions:
+      contents: read
 
 jobs:
   Build:
