--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,33 +1,42 @@
-name: Build Job
-on: 
- # push:
-   # branches: 
-   #   - main
-   pull_request:
-     branches:
-      - main
-   permissions:
-      contents: read
+name: Vprofile CICD Workflow
+
+on:
+  push:
+    branches: [ "main", "develop" ]
+
+  pull_request:
+    branches: [ "main", "develop" ]
+
+  workflow_dispatch:
+
+  schedule:
+    - cron: "10 14 * * 1-5"   # After noon 2:10 pm, Mondat to Friday
+
+
+permissions:
+  contents: read
 
 jobs:
   Build:
     runs-on: ubuntu-latest
     steps:
       - name: Code checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           fetch-depth: 0
+
       - name: Maven Build
         run: mvn install
 
-      - name: Upload Build Artifacts
+      - name: Upload Build Artifact (WAR)
         uses: actions/upload-artifact@v4
         with:
           name: vprofile-app
           path: target/*.war
-      - name: Notify if build fails
+
+      - name: Notify if Build Fails
         if: failure()
-        run: echo "Build failed. Please check the logs for details."
+        run: echo "🚨 Build job failed! Please check logs."
 
 
   Testing:
@@ -40,7 +49,13 @@ jobs:
           fetch-depth: 0
 
       - name: Run tests on main branch
+        if: github.ref == 'refs/heads/main'
         run: mvn test
 
       - name: Checkstyle
+        if: github.ref == 'refs/heads/main'
         run: mvn checkstyle:checkstyle
+
+      - name: Run tests on other branches
+        if: github.ref != 'refs/heads/main'
+        run: echo "Skipping unit tests and code analysis"
