--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,12 @@
 name: Vprofile CICD Workflow
-
-on:
+on: 
   push:
-    branches: [ "main", "develop" ]
+    branches: 
+      - main
 
   pull_request:
-    branches: [ "main", "develop" ]
+    branches: 
+      - main
 
   workflow_dispatch:
 
@@ -13,7 +14,8 @@ on:
     - cron: "10 14 * * 1-5"   # After noon 2:10 pm, Mondat to Friday
 
 
-permissions:
+  
+permissions: 
   contents: read
 
 jobs:
@@ -59,3 +61,30 @@ jobs:
       - name: Run tests on other branches
         if: github.ref != 'refs/heads/main'
         run: echo "Skipping unit tests and code analysis"
+
+  Security_Scan:
+    runs-on: ubuntu-latest
+    needs: Build
+    steps:
+      - name: Code checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Run Trivy filesystem scan
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          scan-type: fs
+          scan-ref: .
+          format: json
+          exit-code: 0
+          vuln-type: os,library
+          output: trivy-results.json
+
+      - name: Upload Trivy scan results as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-scan-results
+          path: trivy-results.json
+
+  
