--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,8 +87,8 @@ jobs:
         with:
           name: trivy-scan-results
           path: trivy-results.json
-  Build and Publish:
-    name: Build and Publish Docker Image
+  BUILD_AND_PUBLISH:
+    name: BUILD_AND_PUBLISH
     runs-on: ubuntu-latest
     environment: production
     needs: [Build, Testing, Security_Scan]    
