--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,9 @@ on:
 
   schedule:
     - cron: "10 14 * * 1-5"   # After noon 2:10 pm, Mondat to Friday
+
 env:
-  ECR_REPOSITORY: 'vprofile-appimage'
-  
+  ECR_REPOSITORY: 'vprofile-appimag
 permissions: 
   contents: read
 
@@ -86,11 +86,12 @@ jobs:
         with:
           name: trivy-scan-results
           path: trivy-results.json
+
   BUILD_AND_PUBLISH:
     name: BUILD_AND_PUBLISH
     runs-on: ubuntu-latest
     environment: Production
-    needs: [Build, Testing, Security_Scan]    
+    needs: [Build, Testing, Security_Scan]
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Code checkout
@@ -98,13 +99,13 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name:  Configure AWS Credentials
+      - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_ACCESS_SECRET_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ vars.AWS_REGION }}
-      
+
       - name: Login to Amazon ECR
         id: login-ecr 
         uses: aws-actions/amazon-ecr-login@v2
@@ -117,6 +118,3 @@ jobs:
         run: |
           docker build -f Docker-files/app/multistage/Dockerfile -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        
-
-  
