Bulid and Publish the docker image

--- a/Docker-files/app/multistage/Dockerfile
+++ b/Docker-files/app/multistage/Dockerfile
@@ -1,5 +1,6 @@
 FROM maven:3.9.9-eclipse-temurin-21-jammy AS BUILD_IMAGE
-/*RUN git clone https://github.com/hkhcoder/vprofile-project.git
+RUN git clone https://github.com:tilaknagulla/actionprofile.git
+/*git@github.com:tilaknagulla/actionprofile.git
 RUN cd vprofile-project && git checkout docker && mvn install*/
 COPY . ./app
 WORKDIR ./app
